# cd-album-list

./: Dockerfile  pyproject.toml
album/: views.py
config/: settings.py
