[tool.poetry]
name = "cd-album-list"
version = "0.1.0"
description = ""
authors = ["s1F102103156 <s1F102103156@iniad.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.2.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
